objects/Test_Log__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corresponding_Bug_Enhancement_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug/Enhancement</label>
        <referenceTo>Release_Task__c</referenceTo>
        <relationshipLabel>Test Log</relationshipLabel>
        <relationshipName>Test_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Tested__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date Tested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY() + 2</defaultValue>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Tested__c</fullName>
        <label>User Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Region</fullName>
                </value>
                <value>
                    <fullName>EU Region</fullName>
                </value>
                <value>
                    <fullName>US Region</fullName>
                </value>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>GF FAE/FTS</fullName>
                </value>
                <value>
                    <fullName>GF CE</fullName>
                </value>
                <value>
                    <fullName>GF PIYE</fullName>
                </value>
                <value>
                    <fullName>GF System Admin</fullName>
                </value>
                <value>
                    <fullName>GF Global Admin</fullName>
                </value>
                <value>
                    <fullName>GF Sales User</fullName>
                </value>
                <value>
                    <fullName>GF Strategic Marketing</fullName>
                </value>
                <value>
                    <fullName>GF Product Management</fullName>
                </value>
                <value>
                    <fullName>GF Planning</fullName>
                </value>
                <value>
                    <fullName>Portal User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                    <color>#66FF99</color>
                    <label>Pass</label>
                </value>
                <value>
                    <fullName>Fail</fullName>
                    <color>#FF0000</color>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#FFFF66</color>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Plan_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan Tested</label>
        <referenceTo>Test_Plan__c</referenceTo>
        <relationshipLabel>Test Log</relationshipLabel>
        <relationshipName>Test_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Script_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Tested</label>
        <referenceTo>Test_Scripts__c</referenceTo>
        <relationshipLabel>Test Log</relationshipLabel>
        <relationshipName>Test_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fail_rate__c</fullName>
        <formula>IF( ISPICKVAL( Status__c ,&quot;Fail&quot;) ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fail rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Log</label>
    <listViews>
        <fullName>Active_Test_Logs</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Profile_Tested__c</columns>
        <columns>Test_Script_Tested__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Tested__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Actual_Results__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/18/2013 12:00 AM</value>
        </filters>
        <label>Active Test Logs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Profile_Tested__c</columns>
        <columns>Test_Script_Tested__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Tested__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Actual_Results__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Test_Logs</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Test_Script_Tested__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Profile_Tested__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Test Logs</label>
    </listViews>
    <listViews>
        <fullName>SWIFT_Gen_Phase_1_SIT_Test_Log</fullName>
        <columns>NAME</columns>
        <columns>Actual_Results__c</columns>
        <columns>Corresponding_Bug_Enhancement_Request__c</columns>
        <columns>Date_Tested__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Test_Plan_Tested__c</columns>
        <columns>Test_Script_Tested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Applicable</value>
        </filters>
        <filters>
            <field>Test_Script_Tested__c</field>
            <operation>contains</operation>
        </filters>
        <label>SWIFT Gen+ Phase 1 SIT Test Log</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SWIFT_Gen_Plus_Active_Test_Log_DRT</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Tested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Tested__c</columns>
        <columns>Corresponding_Bug_Enhancement_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Fail,In Progress</value>
        </filters>
        <filters>
            <field>Test_Script_Tested__c</field>
            <operation>contains</operation>
            <value>DRT</value>
        </filters>
        <label>SWIFT Gen Plus Active Test Log (DRT)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SWIFT_Gen_Plus_Active_Test_Log_MRS</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Tested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Tested__c</columns>
        <columns>Corresponding_Bug_Enhancement_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Fail,In Progress</value>
        </filters>
        <filters>
            <field>Test_Script_Tested__c</field>
            <operation>contains</operation>
            <value>MRS</value>
        </filters>
        <label>SWIFT Gen Plus Active Test Log (MRS)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TLog-{000}</displayFormat>
        <label>Test Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>